--- a/data/Darwin-family.yaml
+++ b/data/Darwin-family.yaml
@@ -2,7 +2,7 @@
 nrpe::config_file: /opt/local/etc/nrpe/nrpe.cfg
 nrpe::config_group: wheel
 nrpe::include_dir: /opt/local/etc/nrpe/nrpe.d
-nrpe::pidfile: /opt/local/var/run/nrpe/nrpe.lock
+nrpe::pid_file: /opt/local/var/run/nrpe/nrpe.lock
 nrpe::plugin_group: wheel
 nrpe::pluginsdir: /opt/local/libexec/nagios
 nrpe::normal_etc: /private/etc
