--- a/data/RedHat-family.yaml
+++ b/data/RedHat-family.yaml
@@ -6,7 +6,7 @@ nrpe::plugins_packages:
   - nagios-plugins-all
   - nagios-plugins-nrpe
 nrpe::pluginsdir: /usr/lib64/nagios/plugins
-nrpe::pidfile: /var/run/nrpe/nrpe2.pid
+nrpe::pid_file: /var/run/nrpe/nrpe.pid
 nrpe::use_zfs_sudo: true
 nrpe::sudoers_exe: /bin/sudo
 ...
