--- a/data/common.yaml
+++ b/data/common.yaml
@@ -42,39 +42,25 @@ nrpe::plugins:
     source: 'puppet:///modules/nrpe/plugins/check_myfilesize.pl'
 
 nrpe::commands:
-  check_users:
-    command: 'check_users -w 5 -c 10'
-  check_load:
-    command: 'check_load -w 15,10,5 -c 30,25,20'
-  check_all_disks:
-    command: 'check_disk  -w 20% -c 10% -A'
-  check_zombie_procs:
-    command: 'check_procs -w 5 -c 10 -s Z'
-  check_total_procs:
-    command: 'check_procs -w 150 -c 200'
-  check_process:
-    command: 'check_procs -c 1: -C "$ARG1$"'
-  check_processwitharg:
-    command: 'check_procs -c 1: -C "$ARG1$" -a "$ARG2$"'
-  check_port_tcp:
-    command: 'check_tcp  -H "$ARG1$" -p "$ARG2$"'
-  check_port_udp:
-    command: 'check_udp  -H "$ARG1$" -p "$ARG2$"'
-  check_swap:
-    command: 'check_swap -w 50 -c 10'
-  check_mailq:
-    command: 'check_mailq -w 1 -c 5'
-  check_procs:
-    command: 'check_procs  -w $ARG1$ -c $ARG2$ -a "$ARG3$"'
-  check_file_age:
-    command: 'check_file_age -w $ARG1$ -c $ARG2$ -f $ARG3$'
+  check_all_disks: {command: 'check_disk -w 20% -c 10% -A'}
+  check_file_age: {command: 'check_file_age -w $ARG1$ -c $ARG2$ -f $ARG3$'}
+  check_load: {command: 'check_load -w 15,10,5 -c 30,25,20'}
+  check_mailq: {command: 'check_mailq -w 1 -c 5'}
+  check_myfilesize: {command: 'check_myfilesize $ARG1$ $ARG2$ $ARG3$'}
+  check_port_tcp: {command: 'check_tcp -H "$ARG1$" -p "$ARG2$"'}
+  check_port_udp: {command: 'check_udp -H "$ARG1$" -p "$ARG2$"'}
+  check_process: {command: 'check_procs -c 1: -C "$ARG1$"'}
+  check_processwitharg: {command: 'check_procs -c 1: -C "$ARG1$" -a "$ARG2$"'}
+  check_procs: {command: 'check_procs -w $ARG1$ -c $ARG2$ -a "$ARG3$"'}
+  check_swap: {command: 'check_swap -w 50 -c 10'}
+  check_total_procs: {command: 'check_procs -w 150 -c 200'}
   check_url:
     command: 'check_http -I "$ARG1$" -p "$ARG2$" -u "$ARG3$" -s "$ARG4$"'
   check_url_auth:
     command: >
       check_http -I "$ARG1$" -p "$ARG2$" -u "$ARG3$" -s "$ARG4$" -a "$ARG5$"
-  check_myfilesize:
-    command: 'check_myfilesize $ARG1$ $ARG2$ $ARG3$'
+  check_users: {command: 'check_users -w 5 -c 10'}
+  check_zombie_procs: {command: 'check_procs -w 5 -c 10 -s Z'}
 
 ### nrpe.cfg default settings
 
@@ -95,7 +81,7 @@ nrpe::debug: false
 
 # PID FILE
 # The name of the file in which the NRPE daemon should write it's process ID
-# number.  The file is only written if the NRPE daemon is started by the root
+# number. The file is only written if the NRPE daemon is started by the root
 # user and is running in standalone mode.
 nrpe::pid_file: /var/run/nrpe.pid
 
@@ -147,7 +133,7 @@ nrpe::nrpe_group: nagios
 # supported.
 #
 # Note: The daemon only does rudimentary checking of the client's IP
-# address.  I would highly recommend adding entries in your /etc/hosts.allow
+# address. I would highly recommend adding entries in your /etc/hosts.allow
 # file to allow only the specified host to connect to the port
 # you are running this daemon on.
 #
@@ -160,7 +146,7 @@ nrpe::allowed_hosts:
 
 # COMMAND ARGUMENT PROCESSING
 # This option determines whether or not the NRPE daemon will allow clients
-# to specify arguments to commands that are executed.  This option only works
+# to specify arguments to commands that are executed. This option only works
 # if the daemon was configured with the --enable-command-args configure script
 # option.
 #
@@ -174,7 +160,7 @@ nrpe::dont_blame_nrpe: false
 # BASH COMMAND SUBSTITUTION
 # This option determines whether or not the NRPE daemon will allow clients
 # to specify arguments that contain bash command substitutions of the form
-# $(...).  This option only works if the daemon was configured with both
+# $(...). This option only works if the daemon was configured with both
 # the --enable-command-args and --enable-bash-command-substitution configure
 # script options.
 #
@@ -193,14 +179,14 @@ nrpe::allow_bash_command_substitution: false
 #
 # *** THIS EXAMPLE MAY POSE A POTENTIAL SECURITY RISK, SO USE WITH CAUTION! ***
 # Usage scenario:
-# Execute restricted commmands using sudo.  For this to work, you need to add
-# the nagios user to your /etc/sudoers.  An example entry for allowing
+# Execute restricted commmands using sudo. For this to work, you need to add
+# the nagios user to your /etc/sudoers. An example entry for allowing
 # execution of the plugins from might be:
 #
 # nagios          ALL=(ALL) NOPASSWD: /usr/lib/nagios/plugins/
 #
 # This lets the nagios user run all commands in that directory (and only them)
-# without asking for a password.  If you do this, make sure you don't give
+# without asking for a password. If you do this, make sure you don't give
 # random users write access to that directory or its contents!
 nrpe::command_prefix:
 
